ecruHelpers/parser/parser.js
import * as AST from "/ecruHelpers/asts.js";
import * as UTIL from "/ecruHelpers/utils.js";
// Generated by Peggy 3.0.2.
//
// https://peggyjs.org/

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { program: peg$parseprogram };
  var peg$startRuleFunction = peg$parseprogram;

  var peg$c0 = "pattern";
  var peg$c1 = "->";
  var peg$c2 = ";";
  var peg$c3 = "=";
  var peg$c4 = "println";
  var peg$c5 = "pprintln";
  var peg$c6 = "print";
  var peg$c7 = "pprint";
  var peg$c8 = ":";
  var peg$c9 = "Formula";
  var peg$c10 = "String";
  var peg$c11 = "Integer";
  var peg$c12 = "Rational";
  var peg$c13 = "Real";
  var peg$c14 = "//";
  var peg$c15 = "\n";
  var peg$c16 = "/*";
  var peg$c17 = "/";
  var peg$c18 = "*";
  var peg$c19 = "\"";
  var peg$c20 = ",";
  var peg$c21 = "+";
  var peg$c22 = "-";
  var peg$c23 = "^";
  var peg$c24 = "!";
  var peg$c25 = "(";
  var peg$c26 = ")";
  var peg$c27 = "add";
  var peg$c28 = "sub";
  var peg$c29 = "mul";
  var peg$c30 = "div";
  var peg$c31 = "pow";
  var peg$c32 = "root";
  var peg$c33 = "sqrt";
  var peg$c34 = "sum";
  var peg$c35 = "prod";
  var peg$c36 = "log";
  var peg$c37 = "ln";
  var peg$c38 = "sin";
  var peg$c39 = "cos";
  var peg$c40 = "tan";
  var peg$c41 = "sec";
  var peg$c42 = "csc";
  var peg$c43 = "cot";
  var peg$c44 = "arcsin";
  var peg$c45 = "arccos";
  var peg$c46 = "arctan";
  var peg$c47 = "arcsec";
  var peg$c48 = "arccsc";
  var peg$c49 = "sinh";
  var peg$c50 = "cosh";
  var peg$c51 = "tanh";
  var peg$c52 = "sech";
  var peg$c53 = "csch";
  var peg$c54 = "coth";
  var peg$c55 = "arcsinh";
  var peg$c56 = "arccosh";
  var peg$c57 = "arctanh";
  var peg$c58 = "arcsech";
  var peg$c59 = "arccsch";
  var peg$c60 = "eval_add";
  var peg$c61 = "eval_negate";
  var peg$c62 = "eval_multiply";
  var peg$c63 = "eval_pow";

  var peg$r0 = /^[a-zA-Z]/;
  var peg$r1 = /^[a-zA-Z0-9]/;
  var peg$r2 = /^[a-z]/;
  var peg$r3 = /^[0-9]/;
  var peg$r4 = /^[ \t\r\n]/;

  var peg$e0 = peg$otherExpectation("valid Ecru program");
  var peg$e1 = peg$otherExpectation("list of statements");
  var peg$e2 = peg$otherExpectation("statement");
  var peg$e3 = peg$literalExpectation("pattern", false);
  var peg$e4 = peg$literalExpectation("->", false);
  var peg$e5 = peg$literalExpectation(";", false);
  var peg$e6 = peg$literalExpectation("=", false);
  var peg$e7 = peg$literalExpectation("println", false);
  var peg$e8 = peg$literalExpectation("pprintln", false);
  var peg$e9 = peg$literalExpectation("print", false);
  var peg$e10 = peg$literalExpectation("pprint", false);
  var peg$e11 = peg$literalExpectation(":", false);
  var peg$e12 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  var peg$e13 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false);
  var peg$e14 = peg$literalExpectation("Formula", false);
  var peg$e15 = peg$literalExpectation("String", false);
  var peg$e16 = peg$literalExpectation("Integer", false);
  var peg$e17 = peg$literalExpectation("Rational", false);
  var peg$e18 = peg$literalExpectation("Real", false);
  var peg$e19 = peg$literalExpectation("//", false);
  var peg$e20 = peg$literalExpectation("\n", false);
  var peg$e21 = peg$literalExpectation("/*", false);
  var peg$e22 = peg$literalExpectation("/", false);
  var peg$e23 = peg$literalExpectation("*", false);
  var peg$e24 = peg$anyExpectation();
  var peg$e25 = peg$literalExpectation("\"", false);
  var peg$e26 = peg$otherExpectation("list of formulae");
  var peg$e27 = peg$literalExpectation(",", false);
  var peg$e28 = peg$literalExpectation("+", false);
  var peg$e29 = peg$literalExpectation("-", false);
  var peg$e30 = peg$literalExpectation("^", false);
  var peg$e31 = peg$literalExpectation("!", false);
  var peg$e32 = peg$literalExpectation("(", false);
  var peg$e33 = peg$literalExpectation(")", false);
  var peg$e34 = peg$literalExpectation("add", false);
  var peg$e35 = peg$literalExpectation("sub", false);
  var peg$e36 = peg$literalExpectation("mul", false);
  var peg$e37 = peg$literalExpectation("div", false);
  var peg$e38 = peg$literalExpectation("pow", false);
  var peg$e39 = peg$literalExpectation("root", false);
  var peg$e40 = peg$literalExpectation("sqrt", false);
  var peg$e41 = peg$literalExpectation("sum", false);
  var peg$e42 = peg$literalExpectation("prod", false);
  var peg$e43 = peg$literalExpectation("log", false);
  var peg$e44 = peg$literalExpectation("ln", false);
  var peg$e45 = peg$literalExpectation("sin", false);
  var peg$e46 = peg$literalExpectation("cos", false);
  var peg$e47 = peg$literalExpectation("tan", false);
  var peg$e48 = peg$literalExpectation("sec", false);
  var peg$e49 = peg$literalExpectation("csc", false);
  var peg$e50 = peg$literalExpectation("cot", false);
  var peg$e51 = peg$literalExpectation("arcsin", false);
  var peg$e52 = peg$literalExpectation("arccos", false);
  var peg$e53 = peg$literalExpectation("arctan", false);
  var peg$e54 = peg$literalExpectation("arcsec", false);
  var peg$e55 = peg$literalExpectation("arccsc", false);
  var peg$e56 = peg$literalExpectation("sinh", false);
  var peg$e57 = peg$literalExpectation("cosh", false);
  var peg$e58 = peg$literalExpectation("tanh", false);
  var peg$e59 = peg$literalExpectation("sech", false);
  var peg$e60 = peg$literalExpectation("csch", false);
  var peg$e61 = peg$literalExpectation("coth", false);
  var peg$e62 = peg$literalExpectation("arcsinh", false);
  var peg$e63 = peg$literalExpectation("arccosh", false);
  var peg$e64 = peg$literalExpectation("arctanh", false);
  var peg$e65 = peg$literalExpectation("arcsech", false);
  var peg$e66 = peg$literalExpectation("arccsch", false);
  var peg$e67 = peg$literalExpectation("eval_add", false);
  var peg$e68 = peg$literalExpectation("eval_negate", false);
  var peg$e69 = peg$literalExpectation("eval_multiply", false);
  var peg$e70 = peg$literalExpectation("eval_pow", false);
  var peg$e71 = peg$classExpectation([["a", "z"]], false, false);
  var peg$e72 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e73 = peg$otherExpectation("whitespace");
  var peg$e74 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false);

  var peg$f0 = function(stmts) {return new AST.Program(stmts);};
  var peg$f1 = function(leftList) {
		let newArr=[];
		for(let i=0;i<leftList.length;i++)
			newArr=newArr.concat(leftList[i][1]);
		

		return newArr;
	};
  var peg$f2 = function(left, right) {return "TODO";};
  var peg$f3 = function(stmt) {return stmt};
  var peg$f4 = function(decl, assg) {
		if(assg.length==0)
			return decl;

		let expr=assg[0][2];
		return [decl,new AST.AssignmentStatement(decl.args[0],expr)];
	};
  var peg$f5 = function(id, expr) {
		
		return new AST.AssignmentStatement(id,expr);
	};
  var peg$f6 = function(val) {return new AST.PrintStatement(val,true);};
  var peg$f7 = function(val) {return new AST.PrettyPrintStatement(val,true);};
  var peg$f8 = function(val) {return new AST.PrintStatement(val);};
  var peg$f9 = function(val) {return new AST.PrettyPrintStatement(val);};
  var peg$f10 = function() {return [];};
  var peg$f11 = function(id, type) {return new AST.DeclarationStatement(id,type);};
  var peg$f12 = function(first, last) {
		let id=first+UTIL.collapseArray(last);
		return new AST.Id(id);
	};
  var peg$f13 = function() {return new AST.FormulaType();};
  var peg$f14 = function() {return new AST.StringType();};
  var peg$f15 = function() {return new AST.IntegerType();};
  var peg$f16 = function() {return new AST.RationalType();};
  var peg$f17 = function() {return new AST.RealType();};
  var peg$f18 = function(input) {
		return new AST.CommentStatement(UTIL.collapseArray(input).trim());
	};
  var peg$f19 = function(input) {

		let filteredInput=UTIL.collapseArray(input);

		return new AST.CommentStatement(filteredInput.substring(0,filteredInput.length-1));
	};
  var peg$f20 = function(input) {return UTIL.collapseArray(input)+"*";};
  var peg$f21 = function(input) {return input!="*" && input!="/"};
  var peg$f22 = function(input) {return input[0]};
  var peg$f23 = function(input) {return input!="\n"};
  var peg$f24 = function(input) {return input[0]};
  var peg$f25 = function(input) {
		return new AST.Str(UTIL.collapseArray(input));
	};
  var peg$f26 = function(input) {return input!="\""};
  var peg$f27 = function(input) {return input[0]};
  var peg$f28 = function(id) {return new AST.IdExpr(id);};
  var peg$f29 = function(left, rightList) {
		let newArr=Array(rightList.length+1);
		newArr[0]=left;
		for(let i=1;i<newArr.length;i++)
			newArr[i]=rightList[i-1][3];

		return newArr;
	};
  var peg$f30 = function(left, rightList) {
		for(let expr of rightList){
			let op=expr[1];
			let right=expr[3];
			if(op=="+"){
				left=new AST.FormulaFunc("add",[left,right]);
			}else{
				left=new AST.FormulaFunc("sub",[left,right]);
			}
		}

		return left;
	};
  var peg$f31 = function(left, rightList) {
		for(let expr of rightList){

			let op;
			let right;
			if(expr.length==4){
				op=expr[1];
				right=expr[3];
			}else{
				op="*";
				right=expr[1];
			}
			
			if(op=="/"){
				left=new AST.FormulaFunc("div",[left,right]);
			}else{
				left=new AST.FormulaFunc("mul",[left,right]);
			}
		}

		return left;
	};
  var peg$f32 = function(leftList, right) {
		for(let i in leftList){
			right=new AST.FormulaFunc("neg",[right]);
		}

		return right;
	};
  var peg$f33 = function(leftList, right) {
		for(let i=leftList.length-1;i>=0;i--){
			let left=leftList[i][0];
			right=new AST.FormulaFunc("pow",[left,right]);
		}

		return right;
	};
  var peg$f34 = function(left, rightList) {
		for(let i in rightList){
			left = new AST.FormulaFunc("fact",[left]);
		}

		return left;
	};
  var peg$f35 = function(left, rightList) {
		return new AST.FormulaFunc(left,rightList);
	};
  var peg$f36 = function(left, right) {
		return new AST.FormulaFunc(left,[right]);
	};
  var peg$f37 = function(additive) { return additive; };
  var peg$f38 = function(val) {return new AST.FormulaId(val)};
  var peg$f39 = function(digits) { return new AST.FormulaNumberLiteral(parseInt(digits.join(""), 10)); };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseprogram() {
    var s0, s1, s2;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parsestatements();
    s2 = peg$parse_();
    peg$savedPos = s0;
    s0 = peg$f0(s1);
    peg$silentFails--;
    s1 = peg$FAILED;
    if (peg$silentFails === 0) { peg$fail(peg$e0); }

    return s0;
  }

  function peg$parsestatements() {
    var s0, s1, s2, s3, s4, s5;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parse_();
    s4 = peg$parsestatement();
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_();
      s3 = [s3, s4, s5];
      s2 = s3;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parse_();
      s4 = peg$parsestatement();
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s3 = [s3, s4, s5];
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    peg$savedPos = s0;
    s1 = peg$f1(s1);
    s0 = s1;
    peg$silentFails--;
    s1 = peg$FAILED;
    if (peg$silentFails === 0) { peg$fail(peg$e1); }

    return s0;
  }

  function peg$parsestatement() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    peg$silentFails++;
    s0 = peg$currPos;
    if (input.substr(peg$currPos, 7) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 7;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseexpr();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        if (input.substr(peg$currPos, 2) === peg$c1) {
          s5 = peg$c1;
          peg$currPos += 2;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e4); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s7 = peg$parseexpr();
          if (s7 !== peg$FAILED) {
            s8 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 59) {
              s9 = peg$c2;
              peg$currPos++;
            } else {
              s9 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e5); }
            }
            if (s9 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f2(s3, s7);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsecommentStatement();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f3(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsedeclStatement();
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          s3 = [];
          s4 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 61) {
            s5 = peg$c3;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e6); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            s7 = peg$parseexpr();
            if (s7 !== peg$FAILED) {
              s5 = [s5, s6, s7];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            if (s3.length >= 1) {
              s4 = peg$FAILED;
            } else {
              s4 = peg$currPos;
              if (input.charCodeAt(peg$currPos) === 61) {
                s5 = peg$c3;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e6); }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                s7 = peg$parseexpr();
                if (s7 !== peg$FAILED) {
                  s5 = [s5, s6, s7];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            }
          }
          s4 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 59) {
            s5 = peg$c2;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e5); }
          }
          if (s5 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f4(s1, s3);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseidentifier();
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 61) {
              s3 = peg$c3;
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e6); }
            }
            if (s3 !== peg$FAILED) {
              s4 = peg$parse_();
              s5 = peg$parseexpr();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (input.charCodeAt(peg$currPos) === 59) {
                  s7 = peg$c2;
                  peg$currPos++;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e5); }
                }
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s0 = peg$f5(s1, s5);
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            if (input.substr(peg$currPos, 7) === peg$c4) {
              s1 = peg$c4;
              peg$currPos += 7;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e7); }
            }
            if (s1 !== peg$FAILED) {
              s2 = peg$parse_();
              s3 = peg$parseexpr();
              if (s3 !== peg$FAILED) {
                s4 = peg$parse_();
                if (input.charCodeAt(peg$currPos) === 59) {
                  s5 = peg$c2;
                  peg$currPos++;
                } else {
                  s5 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e5); }
                }
                if (s5 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s0 = peg$f6(s3);
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              if (input.substr(peg$currPos, 8) === peg$c5) {
                s1 = peg$c5;
                peg$currPos += 8;
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e8); }
              }
              if (s1 !== peg$FAILED) {
                s2 = peg$parse_();
                s3 = peg$parseexpr();
                if (s3 !== peg$FAILED) {
                  s4 = peg$parse_();
                  if (input.charCodeAt(peg$currPos) === 59) {
                    s5 = peg$c2;
                    peg$currPos++;
                  } else {
                    s5 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e5); }
                  }
                  if (s5 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s0 = peg$f7(s3);
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
